tests/NormalTests/paczka1/fuzzy1/92886533.err
Error in line 9: fFMMmBR S987 3,5
Error in line 16: S745 S616 900,0
Error in line 18: lN74P8W S311 68,5
Error in line 26: oVXwHs S616 49,2
Error in line 34: KNv S616 60,4
